# AnythingMCP

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  logger.rs  main.rs
src/commands/: block.rs  config.rs  doctor.rs  dry_run.rs  export.rs  import.rs  inspect.rs  list.rs  logs.rs  mod.rs  register.rs  remove.rs  serve.rs  status.rs  test_tool.rs  update.rs  validate.rs
src/executor/: command_executor.rs
src/mcp/: mod.rs  schema.rs  server.rs  sse.rs  stdio.rs
src/openapi/: executor.rs  mod.rs  models.rs  parser.rs  store.rs
src/parser/: help_parser.rs  help_runner.rs  mod.rs
src/registry/: models.rs  store.rs
tests/: integration_tests.rs  load_test.rs  windows_integration_tests.rs
tests/fixtures/: complex_tool.py  echo_tool.cmd  echo_tool.py  fail_tool.cmd  fail_tool.sh  fast_tool.sh  help_on_stderr_tool.cmd  help_on_stderr_tool.sh  no_help_tool.cmd  no_help_tool.sh
