[package]
name = "mcpw"
version = "1.0.0"
edition = "2021"
description = "Turn any CLI tool or web API into an MCP server without writing code"
license = "MIT"
repository = "https://github.com/kapoorsunny/AnythingMCP"
keywords = ["mcp", "model-context-protocol", "cli", "openapi", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
shell-words = "1"
atty = "0.2"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_yaml = "0.9"

[profile.release]
strip = true          # Strip debug symbols
lto = true            # Link-time optimization (smaller + faster)
codegen-units = 1     # Single codegen unit (better optimization)
panic = "abort"       # No unwinding (smaller binary)

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
